--- a/TableBusWinForms/TableBusWinForms/TableBusWinForms.csproj
+++ b/TableBusWinForms/TableBusWinForms/TableBusWinForms.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminView\BuyerTicketForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminView\BuyerTicketForm.Designer.cs">
+      <DependentUpon>BuyerTicketForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminView\Moderation\City\AddCityForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +156,12 @@
     <Compile Include="Models\Route.cs">
       <DependentUpon>DataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>DataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagrams_Result.cs">
+      <DependentUpon>DataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Table.cs">
       <DependentUpon>DataContext.tt</DependentUpon>
     </Compile>
@@ -170,6 +182,9 @@
     <Compile Include="UserView\ViewTableForm.Designer.cs">
       <DependentUpon>ViewTableForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminView\BuyerTicketForm.resx">
+      <DependentUpon>BuyerTicketForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminView\Moderation\City\AddCityForm.resx">
       <DependentUpon>AddCityForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -190,6 +205,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminView\Moderation\TableRecords\AddTableRecordsForm.resx">
       <DependentUpon>AddTableRecordsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminView\Moderation\TableRecords\ChangeTableRecordsForm.resx">
+      <DependentUpon>ChangeTableRecordsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminView\Moderation\TableRecords\ViewModerationTableRecordsForm.resx">
       <DependentUpon>ViewModerationTableRecordsForm.cs</DependentUpon>
