--- a/TableBusWinForms/TableBusWinForms/TableBusWinForms.csproj
+++ b/TableBusWinForms/TableBusWinForms/TableBusWinForms.csproj
@@ -142,6 +142,12 @@
     <Compile Include="GeneralForm\ViewPurchasedTicketsForm.Designer.cs">
       <DependentUpon>ViewPurchasedTicketsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presenter\AddCityPresenter.cs" />
+    <Compile Include="Presenter\AuthorizePresenter.cs" />
+    <Compile Include="Presenter\BuyerTicketsPresenter.cs" />
+    <Compile Include="Presenter\ChangeCityPresenter.cs" />
+    <Compile Include="Presenter\PurchasedTicketPresenter.cs" />
+    <Compile Include="Presenter\ViewTableFormPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewTableForm.cs">
